--- a/WebClient/login.html
+++ b/WebClient/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Host Tempo</title>
+  <title>Services</title>
   <link rel="stylesheet" href="src/assets/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <link rel="stylesheet" href="dist/css/intlTelInput.css">
