design and address selection

--- a/WebClient/index.html
+++ b/WebClient/index.html
@@ -13,6 +13,7 @@
   <!-- <link href="/src/content/css/styles.css" rel="stylesheet" type='text/css' /> -->
   <link href="./dist/style.css" rel="stylesheet" type='text/css' />
   <link rel="stylesheet" href="./dist/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 
 <body class="mainBody">
@@ -66,6 +67,35 @@
       });
 
     });
+
+
+
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+      showSlides(slideIndex += n);
+    }
+
+    function currentSlide(n) {
+      showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      if (n > slides.length) { slideIndex = 1 }
+      if (n < 1) { slideIndex = slides.length }
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex - 1].style.display = "block";
+      dots[slideIndex - 1].className += " active";
+    }
 
   </script>
 
