--- a/WebClient/login.html
+++ b/WebClient/login.html
@@ -20,55 +20,101 @@
 <body>
   <div class="authfyLogin">
     <div class="loginBoxDiv">
-      <div class="col-lg-4 col-md-6 col-sm-8">
-      <form>
+      <div class="innerForm">
         <div class="brandLogo">
-          <img src="./src/assets/logo.png" height="50">
+          <img src="dist/img/Logo_Service.jpg" height="100" style="float: left;margin-top: -27px;margin-left:-50px;">
           <h2>My Project</h2>
+
         </div>
-        <div class="row">
-            <div class="col-sm-6">
+        <hr style="border: 1px solid">
+        <form>
+
+          <div class="row">
+            <div class="col-md-6 loginButtonsDynamic" class="" style="text-align: center;">
               <input type="button" value="Login" class="loginButton" data-bind="click: showLogin" />
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6 loginButtonsDynamic" style="text-align: center;">
               <input type="button" value="Register" class="registerButton" data-bind="click: showRegister" />
             </div>
-        </div>
+          </div>
 
-        <div class="loginScreen" style="display: none">
-
-          <input type="text" placeholder="Phone Number/Email"
-            data-bind="value: loginUsername, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
-          <input type="password" placeholder="Password"
-            data-bind="value: loginPassword, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
-          <input type="button" value="Login" class="loginButton" data-bind="click: Login" />
-          <div data-bind="text: errLoginMsg" class="invalidClient"></div>
-        </div>
-        <div class="registerScreen" style="display: none">
-          <input type="text" placeholder="First Name"
-            data-bind="value: firstName, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
-          <input type="text" placeholder="Last Name"
-            data-bind="value: lastName, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
-          <!-- <input type="text" placeholder="Phone Number" data-bind="value: mobileNumber, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }"
+          <div class="loginScreen" style="display: none">
+            <div class="form-group">
+              <input type="text" placeholder="Phone Number/Email"
+                data-bind="value: loginUsername, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password"
+                data-bind="value: loginPassword, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
+            </div>
+            <div class="form-group" style="text-align: center;">
+              <input type="button" value="Login" class="loginButton" data-bind="click: Login" />
+            </div>
+            <div data-bind="text: errLoginMsg" class="invalidClient"></div>
+          </div>
+          <div class="registerScreen" style="display: none">
+            <input type="text" placeholder="First Name"
+              data-bind="value: firstName, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
+            <input type="text" placeholder="Last Name"
+              data-bind="value: lastName, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
+            <!-- <input type="text" placeholder="Phone Number" data-bind="value: mobileNumber, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }"
           /> -->
-          <input id="phone" name="phone" type="tel"
-            data-bind="value: mobileNumber, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
-          <input type="text" placeholder="Email"
-            data-bind="value: email, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
-          <input type="password" minlength="8" placeholder="Password (Min 8 Characters)"
-            data-bind="value: password, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
-          <input type="text" placeholder="Referral Code (Optional)"
-            data-bind="value: referralCode, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
-          <input type="button" value="Register" class="registerButton" data-bind="click: Register" />
-          <div data-bind="text: errRegisterMsg" class="invalidClient"></div>
-        </div>
+            <input id="phone" name="phone" type="tel"
+              data-bind="value: mobileNumber, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
+            <input type="text" placeholder="Email"
+              data-bind="value: email, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
+            <input type="password" minlength="8" placeholder="Password (Min 8 Characters)"
+              data-bind="value: password, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
+            <input type="text" placeholder="Referral Code (Optional)"
+              data-bind="value: referralCode, valueUpdate: 'afterkeydown',event: { keypress: LoginOnEnter }" />
+            <div class="form-group" style="text-align: center;">
+              <input type="button" value="Register" class="registerButton" data-bind="click: Register" />
+            </div>
 
-      </form>
+            <div data-bind="text: errRegisterMsg" class="invalidClient"></div>
+          </div>
+
+
+        </form>
+
+        <div class="adsBanner">
+          <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+              <div class="numbertext">1 / 3</div>
+              <img src="dist/img/img1.jpeg" style="width:100%">
+              <div class="text">Caption Text</div>
+            </div>
+
+            <div class="mySlides fade">
+              <div class="numbertext">2 / 3</div>
+              <img src="dist/img/img2.jpeg" style="width:100%">
+              <div class="text">Caption Two</div>
+            </div>
+
+            <div class="mySlides fade">
+              <div class="numbertext">3 / 3</div>
+              <img src="dist/img/img3.jpeg" style="width:100%">
+              <div class="text">Caption Three</div>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          </div>
+          <br>
+
+          <!-- The dots/circles -->
+          <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+          </div>
+        </div>
+      </div>
     </div>
-    </div>
-    <div class="footer">
-        <div>Footer goes here......</div>
-    </div>
+
   </div>
 
   <script type="text/javascript">
@@ -293,10 +339,15 @@
       };
 
       self.showLogin = function () {
+        // $(".loginButtonsDynamic input").css({"width": "50%"})
+        $(".loginButtonsDynamic>.loginButton").css({"width": "45%", "float": "left"})
+        $(".loginButtonsDynamic>.registerButton").css({"width": "45%", "float": "right"})
         $(".loginScreen").show();
         $(".registerScreen").hide();
       }
       self.showRegister = function () {
+        $(".loginButtonsDynamic>.loginButton").css({"width": "45%", "float": "left"})
+        $(".loginButtonsDynamic>.registerButton").css({"width": "45%", "float": "right"})
         $(".registerScreen").show();
         $(".loginScreen").hide();
       }
@@ -348,6 +399,33 @@
       // separateDialCode: true,
       utilsScript: "dist/js/utils.js",
     });
+
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+      showSlides(slideIndex += n);
+    }
+
+    function currentSlide(n) {
+      showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      if (n > slides.length) { slideIndex = 1 }
+      if (n < 1) { slideIndex = slides.length }
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex - 1].style.display = "block";
+      dots[slideIndex - 1].className += " active";
+    }
 
   </script>
 </body>
