--- a/WebClient/login.html
+++ b/WebClient/login.html
@@ -164,8 +164,8 @@
       }
     }
 
-    //let apiUrl = window.location.protocol + "//" + window.location.hostname + (window.location.port ? ':1339' : '')
-    let apiUrl = "http://104.211.158.101"
+    let apiUrl = window.location.protocol + "//" + window.location.hostname + (window.location.port ? ':1339' : '')
+    // let apiUrl = "http://104.211.158.101"
 
     let viewModel = function () {
       let self = this;
