--- a/WebClient/login.html
+++ b/WebClient/login.html
@@ -97,7 +97,7 @@
             <div data-bind="text: errForgotPasswordMsg" class="invalidClient"></div>
           </div>
 
-          <div class="modal" data-backdrop="static" role="dialog" id="validationPopup">
+          <div class="modal custom-model-style" data-backdrop="static" role="dialog" id="validationPopup">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
