--- a/WebClient/login.html
+++ b/WebClient/login.html
@@ -22,11 +22,14 @@
 		<div class="loginBoxDiv">
 			<div class="innerForm">
 				<div class="brandLogo">
+					<a class="mainLogo">
+						<img src="src/content/images/cleanmycarep.png" width='70px' height="40px">
+						<img style="position: absolute; left:34%; top:17px; margin:0px" width="30%" src="src/content/images/cleanImageText.jpeg">
+						<!-- <span v-if="selectedClientObj" class="">{{ClientName}}</span> -->
+						<!-- <span v-if="(selectedClientObj && selectedClientObj.ClientId === 1 && ClientId !== 1)"><button title="Client List" @click="showPropertyPanel"><i style="font-size:24px" class="fa">&#xf107;</i></button></span> -->
+					</a>
 					<div>
-						<img src="dist/img/Logo_Service.jpg" height="100">
-					</div>
-					<div>
-						<h2 class="header">My Project</h2>
+						<!-- <h2 class="header">My Project</h2> -->
 					</div>
 				</div>
 				<!-- <hr style="border: 1px solid"> -->
