paytm payments completed and registration sms sending issues fixed

--- a/WebClient/login.html
+++ b/WebClient/login.html
@@ -493,7 +493,7 @@
 				$(".loginButtonsDynamic>.loginButton").css({ "width": "45%", "float": "left" })
 				$(".loginButtonsDynamic>.registerButton").css({ "width": "45%", "float": "right" })
 				$(".registerScreen").show();
-				$(".loginScreen, .forgotPasswordScreen").hide();
+				$(".loginScreen, .forgotPasswordScreen, .login-style").hide();
 			}
 
 			self.showForgotPasswordSection = function () {
