--- a/WebClient/index.html
+++ b/WebClient/index.html
@@ -71,7 +71,7 @@
 
 
     var slideIndex = 1;
-    showSlides(slideIndex);
+    // showSlides(slideIndex);
 
     function plusSlides(n) {
       showSlides(slideIndex += n);
@@ -94,8 +94,12 @@
         dots[i].className = dots[i].className.replace(" active", "");
       }
       slides[slideIndex - 1].style.display = "block";
-      dots[slideIndex - 1].className += " active";
+      // dots[slideIndex - 1].className += " active";
     }
+
+    setInterval(function(){
+      plusSlides(1)
+    }, 5000)
 
   </script>
 
