--- a/WebClient/login.html
+++ b/WebClient/login.html
@@ -24,7 +24,7 @@
 				<div class="brandLogo">
 					<a class="mainLogo">
 						<img src="src/content/images/cleanmycarep.png" width='70px' height="40px">
-						<img class="inline-logo"  width="180px" src="src/content/images/cleanImageText.jpeg">
+						<img class="inline-logo" width="180px" src="src/content/images/cleanImageText.jpeg">
 						<!-- <span v-if="selectedClientObj" class="">{{ClientName}}</span> -->
 						<!-- <span v-if="(selectedClientObj && selectedClientObj.ClientId === 1 && ClientId !== 1)"><button title="Client List" @click="showPropertyPanel"><i style="font-size:24px" class="fa">&#xf107;</i></button></span> -->
 					</a>
@@ -200,16 +200,13 @@
 				</form>
 
 				<div class="adsBanner">
-					<div class="slideshow-container">
+					<div class="slideshow-container" data-bind="foreach: bannerImages">
 
 						<!-- Full-width images with number and caption text -->
-						<div class="mySlides fade">
-							<div class="numbertext">1 / 3</div>
-							<img src="dist/img/img1.jpeg" style="width:100%">
-							<div class="text">Caption Text</div>
+						<div class="mySlides fade">						
+							<img data-bind="attr:{src: Image}" style="width:100%; height:230px">							
 						</div>
-
-						<div class="mySlides fade">
+						<!-- <div class="mySlides fade">
 							<div class="numbertext">2 / 3</div>
 							<img src="dist/img/img2.jpeg" style="width:100%">
 							<div class="text">Caption Two</div>
@@ -219,7 +216,7 @@
 							<div class="numbertext">3 / 3</div>
 							<img src="dist/img/img3.jpeg" style="width:100%">
 							<div class="text">Caption Three</div>
-						</div>
+						</div> -->
 
 						<!-- Next and previous buttons -->
 						<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -227,7 +224,7 @@
 					</div>
 
 					<!-- The dots/circles -->
-					<div class="banner-dots">
+					<div class="banner-dots" style="display: none;">
 						<span class="dot" onclick="currentSlide(1)"></span>
 						<span class="dot" onclick="currentSlide(2)"></span>
 						<span class="dot" onclick="currentSlide(3)"></span>
@@ -265,6 +262,7 @@
 			self.errRegisterMsg = ko.observable('');
 			self.validationHeader = ko.observable("Validation");
 			self.registerOtp = ko.observable();
+			self.bannerImages = ko.observableArray();
 
 			self.showMessage = function (errMsg, success) {
 				if (errMsg) {
@@ -448,7 +446,7 @@
 								else {
 									self.validationHeader("Registration")
 									self.errorMessage("Registration successful, please login with credentials");
-									$("#validationPopup").modal("show");									
+									$("#validationPopup").modal("show");
 									self.showLogin();
 								}
 							}
@@ -721,6 +719,44 @@
 				});
 			}
 
+			let bannerImageParams = {
+				requestParams: {
+					APIReg: 10008,
+					IsLogin: 1
+				}
+			}
+
+			$.ajax({
+				dataType: "json",
+				type: 'POST',
+				contentType: "application/json;charset=utf-8",
+				url: apiUrl + '/api',
+				data: JSON.stringify(bannerImageParams),
+				success: function (response) {
+
+					if (response && response.ErrorMessage) {
+						self.validationHeader("getting images failed")
+						self.errorMessage(response.ErrorMessage);
+						$("#validationPopup").modal("show");
+						return;
+					}
+					else if (response && response.length > 0) {
+						self.bannerImages(response)						
+						showSlides(slideIndex);
+						setInterval(function(){
+							plusSlides(1)
+						}, 5000)
+					}
+					else {
+						self.errLoginMsg("There is server error, please contact administrator");
+					}
+				},
+				error: function (d) {
+					console.log(d.responseJSON);
+					self.errRegisterMsg(d.responseJSON.ErrorMessage.message);
+				},
+			});
+
 		}
 
 		ko.extenders.isEmail = function (elm, customMessage) {
@@ -771,7 +807,6 @@
 		});
 
 		var slideIndex = 1;
-		showSlides(slideIndex);
 
 		function plusSlides(n) {
 			showSlides(slideIndex += n);
@@ -794,7 +829,7 @@
 				dots[i].className = dots[i].className.replace(" active", "");
 			}
 			slides[slideIndex - 1].style.display = "block";
-			dots[slideIndex - 1].className += " active";
+			// dots[slideIndex - 1].className += " active";
 		}
 
 	</script>
