--- a/WebClient/login.html
+++ b/WebClient/login.html
@@ -109,6 +109,8 @@
 						<div class="form-group" style="text-align: center;">
 							<input type="button" value="Submit" class="loginButton"
 								data-bind="click: SendOtpToRegisteredUser" />
+							<input type="button" value="Login" class="loginButton"
+								data-bind="click: showLogin" />
 						</div>
 
 						<div data-bind="text: errForgotPasswordMsg" class="invalidClient"></div>
@@ -203,8 +205,8 @@
 					<div class="slideshow-container" data-bind="foreach: bannerImages">
 
 						<!-- Full-width images with number and caption text -->
-						<div class="mySlides fade">						
-							<img data-bind="attr:{src: Image}" style="width:100%; height:230px">							
+						<div class="mySlides fade">
+							<img data-bind="attr:{src: Image}" style="width:100%; height:230px">
 						</div>
 						<!-- <div class="mySlides fade">
 							<div class="numbertext">2 / 3</div>
@@ -741,9 +743,9 @@
 						return;
 					}
 					else if (response && response.length > 0) {
-						self.bannerImages(response)						
+						self.bannerImages(response)
 						showSlides(slideIndex);
-						setInterval(function(){
+						setInterval(function () {
 							plusSlides(1)
 						}, 5000)
 					}
