login and logout for IOS app

--- a/WebClient/index.html
+++ b/WebClient/index.html
@@ -101,6 +101,11 @@
       plusSlides(1)
     }, 5000)
 
+    function setAppToken(token){
+      console.log(token);
+      window.localStorage.setItem('rttoken', token);
+    }
+
   </script>
 
 </body>
