--- a/WebClient/login.html
+++ b/WebClient/login.html
@@ -206,7 +206,7 @@
 
 						<!-- Full-width images with number and caption text -->
 						<div class="mySlides fade">
-							<img data-bind="attr:{src: Image}" style="width:100%; height:230px">
+							<img data-bind="attr:{src: ImageUrl}" style="width:100%; height:230px">
 						</div>
 						<!-- <div class="mySlides fade">
 							<div class="numbertext">2 / 3</div>
